tests/invalid/import_call_undefined_module_attr/main.py
import provider

x: int = provider.nonexistent()
